# aksharshala

./: .gitignore  Aksharshala.pro  CMakeLists.txt  LICENSE.md  README.md  httpserver.cpp  httpserver.h  index.html  main.cpp  resources.qrc
.github/workflows/: cmake-build.yml
assets/: data.B2RvKTN7.js  index.1jbUbiLG.js  index.BKzqsF-g.css  index.CZDueQ4f.js  index.DCiF0bg4.js  vendor.BXk_ma1u.js
web_content/: index.html
web_content/assets/: data.B2RvKTN7.js  data.DhYWSe7c.js  index.MamkHASF.css  vendor.BXk_ma1u.js
